Add dots for more players

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
 								<span class="badge">more web</span>
 								<span class="badge">crypto</span>
 							</li>
+							<li>
+								<span class="name">...</span>
+							</li>
 						</ul>
 					</div>
 				</div>
